--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,9 @@
 # created by virtualenv automatically
+# ignore everything by default
 *
+
+!Xianxia/
+!Xianxia/**
+
 .env
 *.env
-
-# but don’t ignore my packages
-!Xianxia/
-!Xianxia/AspectLogic/
-!Xianxia/AspectLogic/__init__.py
-!Xianxia/ConduitLogic/
-!Xianxia/ConduitLogic/__init__.py
